--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,17 +16,17 @@ jobs:
         - name: "Checkout the repository"
           uses: "actions/checkout@v4.2.2"
 
-        - name: "Set up Python"
-          uses: actions/setup-python@v5.3.0
-          with:
-            python-version: "3.12"
-            cache: "pip"
+        - name: Install uv
+          uses: astral-sh/setup-uv@38f3f104447c67c051c4a08e39b64a148898af3a # v3
 
-        - name: "Install requirements"
-          run: python3 -m pip install -r requirements.txt
+        - name: Set up Python
+          run: uv python install 3.12
 
-        - name: "Lint"
-          run: python3 -m ruff check .
+        - name: Install the project
+          run: uv sync --all-extras --dev
 
-        - name: "Format"
-          run: python3 -m ruff format . --check
+        - name: "Run ruff"
+          run: uv run ruff check .
+
+        - name: "Format with ruff"
+          run: uv run ruff format . --check
