--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,13 +17,19 @@ jobs:
       - name: "Checkout the repository"
         uses: "actions/checkout@v4.2.2"
 
+      - name: "Adjust version number"
+        shell: "bash"
+        run: |
+          yq -i -o json '.version="${{ github.event.release.tag_name }}"' \
+            "${{ github.workspace }}/custom_components/evcc/manifest.json"
+
       - name: "ZIP the integration directory"
         shell: "bash"
         run: |
-          cd "${{ github.workspace }}/custom_components/hass_evcc"
+          cd "${{ github.workspace }}/custom_components/evcc"
           zip hass_evcc.zip -r ./
 
       - name: "Upload the ZIP file to the release"
-        uses: "softprops/action-gh-release@v2.1.0"
+        uses: softprops/action-gh-release@v2.1.0
         with:
-          files: ${{ github.workspace }}/custom_components/hass_evcc/hass_evcc.zip
+          files: ${{ github.workspace }}/custom_components/evcc/hass_evcc.zip
